# AmbarShop

./: README.md  check_images.py  manage.py  pyproject.toml
.gigacode/plans/: 1783254345219-misty-meadow.plan.md
AmbarShop/: asgi.py  settings.py  urls.py  wsgi.py
account/: context_processors.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_phone.py  0002_remove_user_username_user_middle_name_and_more.py
core/: admin.py  context_processors.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
delivery/: admin.py  cities.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
delivery/migrations/: 0001_initial.py  0002_deliveryaddress_is_default_and_more.py
fixtures/: categories.json
guides/: admin.py  models.py  serializers.py  urls.py  views.py
guides/management/: __init__.py
guides/migrations/: 0001_initial.py  0002_article_and_articleinteraction.py  0003_guideimage_created_at.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py
shop/: admin.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_popular.py
static/js/: address_form.js  checkout.js  layout.js  main.js  mobile-menu.js
static/style/: style.css
templates/: base.html  contacts.html  home.html
templates/account/: active_orders.html  addresses.html  cart.html  checkout.html  (+11 more)
Отчет/: ~$чет по практике.doc  Бизнес_процессы_AmbarShop.md  Отчет по практике.doc  Отчет_по_практике.md
(+26 files in other folders)
