[tool.poetry]
name = "ambarshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.6"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.17.1"
pillow = "^12.2.0"
faker = "^40.23.0"
requests = "^2.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
